app.js: Fix issue with tooltips not showing
Tooltips now show on the 'X' button as well

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -181,3 +181,7 @@ label {
         transform: rotate(450deg);
     }
 }
+
+.tooltip, .remove-location {
+    pointer-events: none;
+}
